sdk/dataprotection/arm-dataprotection/samples/v1/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                                                   | **Description**                                                                                                                                                                                                                                                                                                                                                                                       |
| ----------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [backupInstancesAdhocBackupSample.js][backupinstancesadhocbackupsample]                                                                         | Trigger adhoc backup x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/TriggerBackup.json                                                                                                                                                                                                                |
| [backupInstancesCreateOrUpdateSample.js][backupinstancescreateorupdatesample]                                                                   | Create or update a backup instance in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/PutBackupInstance.json                                                                                                                                                                            |
| [backupInstancesDeleteSample.js][backupinstancesdeletesample]                                                                                   | Delete a backup instance in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/DeleteBackupInstance.json                                                                                                                                                                                   |
| [backupInstancesGetBackupInstanceOperationResultSample.js][backupinstancesgetbackupinstanceoperationresultsample]                               | Get result of backup instance creation operation x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/GetBackupInstanceOperationResult.json                                                                                                                                                                 |
| [backupInstancesGetSample.js][backupinstancesgetsample]                                                                                         | Gets a backup instance with name in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/GetBackupInstance.json                                                                                                                                                                              |
| [backupInstancesListSample.js][backupinstanceslistsample]                                                                                       | Gets a backup instances belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ListBackupInstances.json                                                                                                                                                                           |
| [backupInstancesResumeBackupsSample.js][backupinstancesresumebackupssample]                                                                     | This operation will resume backups for backup instance x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ResumeBackups.json                                                                                                                                                                              |
| [backupInstancesResumeProtectionSample.js][backupinstancesresumeprotectionsample]                                                               | This operation will resume protection for a stopped backup instance x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ResumeProtection.json                                                                                                                                                              |
| [backupInstancesStopProtectionSample.js][backupinstancesstopprotectionsample]                                                                   | This operation will stop protection of a backup instance and data will be held forever x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/StopProtection.json                                                                                                                                             |
| [backupInstancesSuspendBackupsSample.js][backupinstancessuspendbackupssample]                                                                   | This operation will stop backup for a backup instance and retains the backup data as per the policy (except latest Recovery point, which will be retained forever) x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/SuspendBackups.json                                                                 |
| [backupInstancesSyncBackupInstanceSample.js][backupinstancessyncbackupinstancesample]                                                           | Sync backup instance again in case of failure This action will retry last failed operation and will bring backup instance to valid state x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/SyncBackupInstance.json                                                                                       |
| [backupInstancesTriggerRehydrateSample.js][backupinstancestriggerrehydratesample]                                                               | rehydrate recovery point for restore for a BackupInstance x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/TriggerRehydrate.json                                                                                                                                                                        |
| [backupInstancesTriggerRestoreSample.js][backupinstancestriggerrestoresample]                                                                   | Triggers restore for a BackupInstance x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/TriggerRestore.json                                                                                                                                                                                              |
| [backupInstancesValidateForBackupSample.js][backupinstancesvalidateforbackupsample]                                                             | Validate whether adhoc backup will be successful or not x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ValidateForBackup.json                                                                                                                                                                         |
| [backupInstancesValidateForRestoreSample.js][backupinstancesvalidateforrestoresample]                                                           | Validates if Restore can be triggered for a DataSource x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ValidateRestore.json                                                                                                                                                                            |
| [backupPoliciesCreateOrUpdateSample.js][backuppoliciescreateorupdatesample]                                                                     | Creates or Updates a backup policy belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/PolicyCRUD/CreateOrUpdateBackupPolicy.json                                                                                                                                                                       |
| [backupPoliciesDeleteSample.js][backuppoliciesdeletesample]                                                                                     | Deletes a backup policy belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/PolicyCRUD/DeleteBackupPolicy.json                                                                                                                                                                                          |
| [backupPoliciesGetSample.js][backuppoliciesgetsample]                                                                                           | Gets a backup policy belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/PolicyCRUD/GetBackupPolicy.json                                                                                                                                                                                                |
| [backupPoliciesListSample.js][backuppolicieslistsample]                                                                                         | Returns list of backup policies belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/PolicyCRUD/ListBackupPolicy.json                                                                                                                                                                                    |
| [backupVaultOperationResultsGetSample.js][backupvaultoperationresultsgetsample]                                                                 | x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/GetOperationResultPatch.json                                                                                                                                                                                                                                          |
| [backupVaultsCheckNameAvailabilitySample.js][backupvaultschecknameavailabilitysample]                                                           | API to check for resource name availability x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/CheckBackupVaultsNameAvailability.json                                                                                                                                                                                    |
| [backupVaultsCreateOrUpdateSample.js][backupvaultscreateorupdatesample]                                                                         | Creates or updates a BackupVault resource belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/PutBackupVault.json                                                                                                                                                                          |
| [backupVaultsDeleteSample.js][backupvaultsdeletesample]                                                                                         | Deletes a BackupVault resource from the resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/DeleteBackupVault.json                                                                                                                                                                                        |
| [backupVaultsGetInResourceGroupSample.js][backupvaultsgetinresourcegroupsample]                                                                 | Returns resource collection belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/GetBackupVaultsInResourceGroup.json                                                                                                                                                                        |
| [backupVaultsGetInSubscriptionSample.js][backupvaultsgetinsubscriptionsample]                                                                   | Returns resource collection belonging to a subscription. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/GetBackupVaultsInSubscription.json                                                                                                                                                                           |
| [backupVaultsGetSample.js][backupvaultsgetsample]                                                                                               | Returns a resource belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/GetBackupVault.json                                                                                                                                                                                                 |
| [backupVaultsUpdateSample.js][backupvaultsupdatesample]                                                                                         | Updates a BackupVault resource belonging to a resource group. For example, updating tags for a resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/VaultCRUD/PatchBackupVault.json                                                                                                                                        |
| [dataProtectionCheckFeatureSupportSample.js][dataprotectioncheckfeaturesupportsample]                                                           | Validates if a feature is supported x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/CheckfeatureSupport.json                                                                                                                                                                                                                    |
| [dataProtectionOperationsListSample.js][dataprotectionoperationslistsample]                                                                     | Returns the list of available operations. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/Operations/List.json                                                                                                                                                                                                                  |
| [deletedBackupInstancesGetSample.js][deletedbackupinstancesgetsample]                                                                           | Gets a deleted backup instance with name in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/DeletedBackupInstanceOperations/GetDeletedBackupInstance.json                                                                                                                                                        |
| [deletedBackupInstancesListSample.js][deletedbackupinstanceslistsample]                                                                         | Gets deleted backup instances belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/DeletedBackupInstanceOperations/ListDeletedBackupInstances.json                                                                                                                                                       |
| [deletedBackupInstancesUndeleteSample.js][deletedbackupinstancesundeletesample]                                                                 | x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/DeletedBackupInstanceOperations/UndeleteDeletedBackupInstance.json                                                                                                                                                                                                              |
| [dppResourceGuardProxyCreateOrUpdateSample.js][dppresourceguardproxycreateorupdatesample]                                                       | Creates or Updates a ResourceGuardProxy x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/PutResourceGuardProxy.json                                                                                                                                                                                       |
| [dppResourceGuardProxyDeleteSample.js][dppresourceguardproxydeletesample]                                                                       | Deletes the ResourceGuardProxy x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/DeleteResourceGuardProxy.json                                                                                                                                                                                             |
| [dppResourceGuardProxyGetSample.js][dppresourceguardproxygetsample]                                                                             | Returns the ResourceGuardProxy object associated with the vault, and that matches the name in the request x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/GetResourceGuardProxy.json                                                                                                                     |
| [dppResourceGuardProxyListSample.js][dppresourceguardproxylistsample]                                                                           | Returns the list of ResourceGuardProxies associated with the vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/ListResourceGuardProxy.json                                                                                                                                                           |
| [dppResourceGuardProxyUnlockDeleteSample.js][dppresourceguardproxyunlockdeletesample]                                                           | UnlockDelete call for ResourceGuardProxy, executed before one can delete it x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardProxyCRUD/UnlockDeleteResourceGuardProxy.json                                                                                                                                          |
| [exportJobsOperationResultGetSample.js][exportjobsoperationresultgetsample]                                                                     | Gets the operation result of operation triggered by Export Jobs API. If the operation is successful, then it also contains URL of a Blob and a SAS key to access the same. The blob contains exported jobs in JSON serialized format. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/JobCRUD/GetExportJobsOperationResult.json |
| [exportJobsTriggerSample.js][exportjobstriggersample]                                                                                           | Triggers export of jobs and returns an OperationID to track. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/JobCRUD/TriggerExportJobs.json                                                                                                                                                                                     |
| [jobsGetSample.js][jobsgetsample]                                                                                                               | Gets a job with id in a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/JobCRUD/GetJob.json                                                                                                                                                                                                                        |
| [jobsListSample.js][jobslistsample]                                                                                                             | Returns list of jobs belonging to a backup vault x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/JobCRUD/ListJobs.json                                                                                                                                                                                                          |
| [operationResultGetSample.js][operationresultgetsample]                                                                                         | Gets the operation result for a resource x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/GetOperationResult.json                                                                                                                                                                                                                |
| [operationStatusBackupVaultContextGetSample.js][operationstatusbackupvaultcontextgetsample]                                                     | Gets the operation status for an operation over a BackupVault's context. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/GetOperationStatusVaultContext.json                                                                                                                                                                    |
| [operationStatusGetSample.js][operationstatusgetsample]                                                                                         | Gets the operation status for a resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/GetOperationStatus.json                                                                                                                                                                                                               |
| [operationStatusResourceGroupContextGetSample.js][operationstatusresourcegroupcontextgetsample]                                                 | Gets the operation status for an operation over a ResourceGroup's context. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/GetOperationStatusRGContext.json                                                                                                                                                                     |
| [recoveryPointsGetSample.js][recoverypointsgetsample]                                                                                           | Gets a Recovery Point using recoveryPointId for a Datasource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/GetRecoveryPoint.json                                                                                                                                                                    |
| [recoveryPointsListSample.js][recoverypointslistsample]                                                                                         | Returns a list of Recovery Points for a DataSource in a vault. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/ListRecoveryPoints.json                                                                                                                                                                 |
| [resourceGuardsDeleteSample.js][resourceguardsdeletesample]                                                                                     | Deletes a ResourceGuard resource from the resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/DeleteResourceGuard.json                                                                                                                                                                            |
| [resourceGuardsGetBackupSecurityPinRequestsObjectsSample.js][resourceguardsgetbackupsecuritypinrequestsobjectssample]                           | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListBackupSecurityPINRequests.json                                                                                                    |
| [resourceGuardsGetDefaultBackupSecurityPinRequestsObjectSample.js][resourceguardsgetdefaultbackupsecuritypinrequestsobjectsample]               | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultBackupSecurityPINRequests.json                                                                                              |
| [resourceGuardsGetDefaultDeleteProtectedItemRequestsObjectSample.js][resourceguardsgetdefaultdeleteprotecteditemrequestsobjectsample]           | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultDeleteProtectedItemRequests.json                                                                                            |
| [resourceGuardsGetDefaultDeleteResourceGuardProxyRequestsObjectSample.js][resourceguardsgetdefaultdeleteresourceguardproxyrequestsobjectsample] | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultDeleteResourceGuardProxyRequests.json                                                                                       |
| [resourceGuardsGetDefaultDisableSoftDeleteRequestsObjectSample.js][resourceguardsgetdefaultdisablesoftdeleterequestsobjectsample]               | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultDisableSoftDeleteRequests.json                                                                                              |
| [resourceGuardsGetDefaultUpdateProtectedItemRequestsObjectSample.js][resourceguardsgetdefaultupdateprotecteditemrequestsobjectsample]           | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultUpdateProtectedItemRequests.json                                                                                            |
| [resourceGuardsGetDefaultUpdateProtectionPolicyRequestsObjectSample.js][resourceguardsgetdefaultupdateprotectionpolicyrequestsobjectsample]     | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetDefaultUpdateProtectionPolicyRequests.json                                                                                         |
| [resourceGuardsGetDeleteProtectedItemRequestsObjectsSample.js][resourceguardsgetdeleteprotecteditemrequestsobjectssample]                       | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListDeleteProtectedItemRequests.json                                                                                                  |
| [resourceGuardsGetDeleteResourceGuardProxyRequestsObjectsSample.js][resourceguardsgetdeleteresourceguardproxyrequestsobjectssample]             | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListDeleteResourceGuardProxyRequests.json                                                                                             |
| [resourceGuardsGetDisableSoftDeleteRequestsObjectsSample.js][resourceguardsgetdisablesoftdeleterequestsobjectssample]                           | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListDisableSoftDeleteRequests.json                                                                                                    |
| [resourceGuardsGetResourcesInResourceGroupSample.js][resourceguardsgetresourcesinresourcegroupsample]                                           | Returns ResourceGuards collection belonging to a ResourceGroup. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetResourceGuardsInResourceGroup.json                                                                                                                                                         |
| [resourceGuardsGetResourcesInSubscriptionSample.js][resourceguardsgetresourcesinsubscriptionsample]                                             | Returns ResourceGuards collection belonging to a subscription. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetResourceGuardsInSubscription.json                                                                                                                                                           |
| [resourceGuardsGetSample.js][resourceguardsgetsample]                                                                                           | Returns a ResourceGuard belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/GetResourceGuard.json                                                                                                                                                                                  |
| [resourceGuardsGetUpdateProtectedItemRequestsObjectsSample.js][resourceguardsgetupdateprotecteditemrequestsobjectssample]                       | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListUpdateProtectedItemRequests.json                                                                                                  |
| [resourceGuardsGetUpdateProtectionPolicyRequestsObjectsSample.js][resourceguardsgetupdateprotectionpolicyrequestsobjectssample]                 | Returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/ListUpdateProtectionPolicyRequests.json                                                                                               |
| [resourceGuardsPatchSample.js][resourceguardspatchsample]                                                                                       | Updates a ResourceGuard resource belonging to a resource group. For example, updating tags for a resource. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/PatchResourceGuard.json                                                                                                                            |
| [resourceGuardsPutSample.js][resourceguardsputsample]                                                                                           | Creates or updates a ResourceGuard resource belonging to a resource group. x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/ResourceGuardCRUD/PutResourceGuard.json                                                                                                                                                              |
| [restorableTimeRangesFindSample.js][restorabletimerangesfindsample]                                                                             | x-ms-original-file: specification/dataprotection/resource-manager/Microsoft.DataProtection/stable/2023-01-01/examples/BackupInstanceOperations/FindRestorableTimeRanges.json                                                                                                                                                                                                                          |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node backupInstancesAdhocBackupSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env DATAPROTECTION_SUBSCRIPTION_ID="<dataprotection subscription id>" DATAPROTECTION_RESOURCE_GROUP="<dataprotection resource group>" node backupInstancesAdhocBackupSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[backupinstancesadhocbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesAdhocBackupSample.js
[backupinstancescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesCreateOrUpdateSample.js
[backupinstancesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesDeleteSample.js
[backupinstancesgetbackupinstanceoperationresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesGetBackupInstanceOperationResultSample.js
[backupinstancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesGetSample.js
[backupinstanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesListSample.js
[backupinstancesresumebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesResumeBackupsSample.js
[backupinstancesresumeprotectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesResumeProtectionSample.js
[backupinstancesstopprotectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesStopProtectionSample.js
[backupinstancessuspendbackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesSuspendBackupsSample.js
[backupinstancessyncbackupinstancesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesSyncBackupInstanceSample.js
[backupinstancestriggerrehydratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesTriggerRehydrateSample.js
[backupinstancestriggerrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesTriggerRestoreSample.js
[backupinstancesvalidateforbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesValidateForBackupSample.js
[backupinstancesvalidateforrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupInstancesValidateForRestoreSample.js
[backuppoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupPoliciesCreateOrUpdateSample.js
[backuppoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupPoliciesDeleteSample.js
[backuppoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupPoliciesGetSample.js
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupPoliciesListSample.js
[backupvaultoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupVaultOperationResultsGetSample.js
[backupvaultschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupVaultsCheckNameAvailabilitySample.js
[backupvaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupVaultsCreateOrUpdateSample.js
[backupvaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupVaultsDeleteSample.js
[backupvaultsgetinresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupVaultsGetInResourceGroupSample.js
[backupvaultsgetinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupVaultsGetInSubscriptionSample.js
[backupvaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupVaultsGetSample.js
[backupvaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/backupVaultsUpdateSample.js
[dataprotectioncheckfeaturesupportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/dataProtectionCheckFeatureSupportSample.js
[dataprotectionoperationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/dataProtectionOperationsListSample.js
[deletedbackupinstancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/deletedBackupInstancesGetSample.js
[deletedbackupinstanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/deletedBackupInstancesListSample.js
[deletedbackupinstancesundeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/deletedBackupInstancesUndeleteSample.js
[dppresourceguardproxycreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/dppResourceGuardProxyCreateOrUpdateSample.js
[dppresourceguardproxydeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/dppResourceGuardProxyDeleteSample.js
[dppresourceguardproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/dppResourceGuardProxyGetSample.js
[dppresourceguardproxylistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/dppResourceGuardProxyListSample.js
[dppresourceguardproxyunlockdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/dppResourceGuardProxyUnlockDeleteSample.js
[exportjobsoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/exportJobsOperationResultGetSample.js
[exportjobstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/exportJobsTriggerSample.js
[jobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/jobsGetSample.js
[jobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/jobsListSample.js
[operationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/operationResultGetSample.js
[operationstatusbackupvaultcontextgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/operationStatusBackupVaultContextGetSample.js
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/operationStatusGetSample.js
[operationstatusresourcegroupcontextgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/operationStatusResourceGroupContextGetSample.js
[recoverypointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/recoveryPointsGetSample.js
[recoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/recoveryPointsListSample.js
[resourceguardsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsDeleteSample.js
[resourceguardsgetbackupsecuritypinrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetBackupSecurityPinRequestsObjectsSample.js
[resourceguardsgetdefaultbackupsecuritypinrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDefaultBackupSecurityPinRequestsObjectSample.js
[resourceguardsgetdefaultdeleteprotecteditemrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDefaultDeleteProtectedItemRequestsObjectSample.js
[resourceguardsgetdefaultdeleteresourceguardproxyrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDefaultDeleteResourceGuardProxyRequestsObjectSample.js
[resourceguardsgetdefaultdisablesoftdeleterequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDefaultDisableSoftDeleteRequestsObjectSample.js
[resourceguardsgetdefaultupdateprotecteditemrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDefaultUpdateProtectedItemRequestsObjectSample.js
[resourceguardsgetdefaultupdateprotectionpolicyrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDefaultUpdateProtectionPolicyRequestsObjectSample.js
[resourceguardsgetdeleteprotecteditemrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDeleteProtectedItemRequestsObjectsSample.js
[resourceguardsgetdeleteresourceguardproxyrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDeleteResourceGuardProxyRequestsObjectsSample.js
[resourceguardsgetdisablesoftdeleterequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetDisableSoftDeleteRequestsObjectsSample.js
[resourceguardsgetresourcesinresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetResourcesInResourceGroupSample.js
[resourceguardsgetresourcesinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetResourcesInSubscriptionSample.js
[resourceguardsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetSample.js
[resourceguardsgetupdateprotecteditemrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetUpdateProtectedItemRequestsObjectsSample.js
[resourceguardsgetupdateprotectionpolicyrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsGetUpdateProtectionPolicyRequestsObjectsSample.js
[resourceguardspatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsPatchSample.js
[resourceguardsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/resourceGuardsPutSample.js
[restorabletimerangesfindsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v1/javascript/restorableTimeRangesFindSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-dataprotection?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/dataprotection/arm-dataprotection/README.md
