sdk/dataprotection/arm-dataprotection/samples/v4/javascript/README.md
# @azure/arm-dataprotection client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-dataprotection in some common scenarios.

| **File Name**                                                                                                                                   | **Description**                                                                                                                                                                                                                                                                                                |
| ----------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [backupInstancesAdhocBackupSample.js][backupinstancesadhocbackupsample]                                                                         | trigger adhoc backup x-ms-original-file: 2025-07-01/BackupInstanceOperations/TriggerBackup.json                                                                                                                                                                                                                |
| [backupInstancesCreateOrUpdateSample.js][backupinstancescreateorupdatesample]                                                                   | create or update a backup instance in a backup vault x-ms-original-file: 2025-07-01/BackupInstanceOperations/PutBackupInstance.json                                                                                                                                                                            |
| [backupInstancesDeleteSample.js][backupinstancesdeletesample]                                                                                   | delete a backup instance in a backup vault x-ms-original-file: 2025-07-01/BackupInstanceOperations/DeleteBackupInstance.json                                                                                                                                                                                   |
| [backupInstancesExtensionRoutingListSample.js][backupinstancesextensionroutinglistsample]                                                       | gets a list of backup instances associated with a tracked resource x-ms-original-file: 2025-07-01/BackupInstanceOperations/ListBackupInstancesExtensionRouting.json                                                                                                                                            |
| [backupInstancesGetBackupInstanceOperationResultSample.js][backupinstancesgetbackupinstanceoperationresultsample]                               | get result of backup instance creation operation x-ms-original-file: 2025-07-01/BackupInstanceOperations/GetBackupInstanceOperationResult.json                                                                                                                                                                 |
| [backupInstancesGetSample.js][backupinstancesgetsample]                                                                                         | gets a backup instance with name in a backup vault x-ms-original-file: 2025-07-01/BackupInstanceOperations/GetBackupInstance.json                                                                                                                                                                              |
| [backupInstancesListSample.js][backupinstanceslistsample]                                                                                       | gets a backup instances belonging to a backup vault x-ms-original-file: 2025-07-01/BackupInstanceOperations/ListBackupInstances.json                                                                                                                                                                           |
| [backupInstancesResumeBackupsSample.js][backupinstancesresumebackupssample]                                                                     | this operation will resume backups for backup instance x-ms-original-file: 2025-07-01/BackupInstanceOperations/ResumeBackups.json                                                                                                                                                                              |
| [backupInstancesResumeProtectionSample.js][backupinstancesresumeprotectionsample]                                                               | this operation will resume protection for a stopped backup instance x-ms-original-file: 2025-07-01/BackupInstanceOperations/ResumeProtection.json                                                                                                                                                              |
| [backupInstancesStopProtectionSample.js][backupinstancesstopprotectionsample]                                                                   | this operation will stop protection of a backup instance and data will be held forever x-ms-original-file: 2025-07-01/BackupInstanceOperations/StopProtection.json                                                                                                                                             |
| [backupInstancesSuspendBackupsSample.js][backupinstancessuspendbackupssample]                                                                   | this operation will stop backup for a backup instance and retains the backup data as per the policy (except latest Recovery point, which will be retained forever) x-ms-original-file: 2025-07-01/BackupInstanceOperations/SuspendBackup_ResourceGuardEnabled.json                                             |
| [backupInstancesSyncBackupInstanceSample.js][backupinstancessyncbackupinstancesample]                                                           | sync backup instance again in case of failure This action will retry last failed operation and will bring backup instance to valid state x-ms-original-file: 2025-07-01/BackupInstanceOperations/SyncBackupInstance.json                                                                                       |
| [backupInstancesTriggerCrossRegionRestoreSample.js][backupinstancestriggercrossregionrestoresample]                                             | triggers Cross Region Restore for BackupInstance. x-ms-original-file: 2025-07-01/CrossRegionRestore/TriggerCrossRegionRestore.json                                                                                                                                                                             |
| [backupInstancesTriggerRehydrateSample.js][backupinstancestriggerrehydratesample]                                                               | rehydrate recovery point for restore for a BackupInstance x-ms-original-file: 2025-07-01/BackupInstanceOperations/TriggerRehydrate.json                                                                                                                                                                        |
| [backupInstancesTriggerRestoreSample.js][backupinstancestriggerrestoresample]                                                                   | triggers restore for a BackupInstance x-ms-original-file: 2025-07-01/BackupInstanceOperations/TriggerRestore.json                                                                                                                                                                                              |
| [backupInstancesValidateCrossRegionRestoreSample.js][backupinstancesvalidatecrossregionrestoresample]                                           | validates whether Cross Region Restore can be triggered for DataSource. x-ms-original-file: 2025-07-01/CrossRegionRestore/ValidateCrossRegionRestore.json                                                                                                                                                      |
| [backupInstancesValidateForBackupSample.js][backupinstancesvalidateforbackupsample]                                                             | validate whether adhoc backup will be successful or not x-ms-original-file: 2025-07-01/BackupInstanceOperations/ValidateForBackup.json                                                                                                                                                                         |
| [backupInstancesValidateForModifyBackupSample.js][backupinstancesvalidateformodifybackupsample]                                                 | validate whether update for backup instance will be successful or not x-ms-original-file: 2025-07-01/BackupInstanceOperations/ValidateForModifyBackup.json                                                                                                                                                     |
| [backupInstancesValidateForRestoreSample.js][backupinstancesvalidateforrestoresample]                                                           | validates if Restore can be triggered for a DataSource x-ms-original-file: 2025-07-01/BackupInstanceOperations/ValidateRestore.json                                                                                                                                                                            |
| [backupPoliciesCreateOrUpdateSample.js][backuppoliciescreateorupdatesample]                                                                     | creates or Updates a backup policy belonging to a backup vault x-ms-original-file: 2025-07-01/PolicyCRUD/CreateOrUpdateBackupPolicy.json                                                                                                                                                                       |
| [backupPoliciesDeleteSample.js][backuppoliciesdeletesample]                                                                                     | deletes a backup policy belonging to a backup vault x-ms-original-file: 2025-07-01/PolicyCRUD/DeleteBackupPolicy.json                                                                                                                                                                                          |
| [backupPoliciesGetSample.js][backuppoliciesgetsample]                                                                                           | gets a backup policy belonging to a backup vault x-ms-original-file: 2025-07-01/PolicyCRUD/GetBackupPolicy.json                                                                                                                                                                                                |
| [backupPoliciesListSample.js][backuppolicieslistsample]                                                                                         | returns list of backup policies belonging to a backup vault x-ms-original-file: 2025-07-01/PolicyCRUD/ListBackupPolicy.json                                                                                                                                                                                    |
| [backupVaultOperationResultsGetSample.js][backupvaultoperationresultsgetsample]                                                                 | get a BackupVaultResource x-ms-original-file: 2025-07-01/VaultCRUD/GetOperationResultPatch.json                                                                                                                                                                                                                |
| [backupVaultsCheckNameAvailabilitySample.js][backupvaultschecknameavailabilitysample]                                                           | aPI to check for resource name availability x-ms-original-file: 2025-07-01/VaultCRUD/CheckBackupVaultsNameAvailability.json                                                                                                                                                                                    |
| [backupVaultsCreateOrUpdateSample.js][backupvaultscreateorupdatesample]                                                                         | creates or updates a BackupVault resource belonging to a resource group. x-ms-original-file: 2025-07-01/VaultCRUD/PutBackupVault.json                                                                                                                                                                          |
| [backupVaultsDeleteSample.js][backupvaultsdeletesample]                                                                                         | deletes a BackupVault resource from the resource group. x-ms-original-file: 2025-07-01/VaultCRUD/DeleteBackupVault.json                                                                                                                                                                                        |
| [backupVaultsGetSample.js][backupvaultsgetsample]                                                                                               | returns a resource belonging to a resource group. x-ms-original-file: 2025-07-01/VaultCRUD/GetBackupVault.json                                                                                                                                                                                                 |
| [backupVaultsListInResourceGroupSample.js][backupvaultslistinresourcegroupsample]                                                               | returns resource collection belonging to a resource group. x-ms-original-file: 2025-07-01/VaultCRUD/GetBackupVaultsInResourceGroup.json                                                                                                                                                                        |
| [backupVaultsListInSubscriptionSample.js][backupvaultslistinsubscriptionsample]                                                                 | returns resource collection belonging to a subscription. x-ms-original-file: 2025-07-01/VaultCRUD/GetBackupVaultsInSubscription.json                                                                                                                                                                           |
| [backupVaultsUpdateSample.js][backupvaultsupdatesample]                                                                                         | updates a BackupVault resource belonging to a resource group. For example, updating tags for a resource. x-ms-original-file: 2025-07-01/VaultCRUD/PatchBackupVault.json                                                                                                                                        |
| [dataProtectionCheckFeatureSupportSample.js][dataprotectioncheckfeaturesupportsample]                                                           | validates if a feature is supported x-ms-original-file: 2025-07-01/CheckfeatureSupport.json                                                                                                                                                                                                                    |
| [dataProtectionOperationsListSample.js][dataprotectionoperationslistsample]                                                                     | list the operations for the provider x-ms-original-file: 2025-07-01/Operations/List.json                                                                                                                                                                                                                       |
| [deletedBackupInstancesGetSample.js][deletedbackupinstancesgetsample]                                                                           | gets a deleted backup instance with name in a backup vault x-ms-original-file: 2025-07-01/DeletedBackupInstanceOperations/GetDeletedBackupInstance.json                                                                                                                                                        |
| [deletedBackupInstancesListSample.js][deletedbackupinstanceslistsample]                                                                         | gets deleted backup instances belonging to a backup vault x-ms-original-file: 2025-07-01/DeletedBackupInstanceOperations/ListDeletedBackupInstances.json                                                                                                                                                       |
| [deletedBackupInstancesUndeleteSample.js][deletedbackupinstancesundeletesample]                                                                 | a long-running resource action. x-ms-original-file: 2025-07-01/DeletedBackupInstanceOperations/UndeleteDeletedBackupInstance.json                                                                                                                                                                              |
| [dppResourceGuardProxyCreateOrUpdateSample.js][dppresourceguardproxycreateorupdatesample]                                                       | creates or Updates a ResourceGuardProxy x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/PutResourceGuardProxy.json                                                                                                                                                                                       |
| [dppResourceGuardProxyDeleteSample.js][dppresourceguardproxydeletesample]                                                                       | deletes the ResourceGuardProxy x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/DeleteResourceGuardProxy.json                                                                                                                                                                                             |
| [dppResourceGuardProxyGetSample.js][dppresourceguardproxygetsample]                                                                             | returns the ResourceGuardProxy object associated with the vault, and that matches the name in the request x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/GetResourceGuardProxy.json                                                                                                                     |
| [dppResourceGuardProxyListSample.js][dppresourceguardproxylistsample]                                                                           | returns the list of ResourceGuardProxies associated with the vault x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/ListResourceGuardProxy.json                                                                                                                                                           |
| [dppResourceGuardProxyUnlockDeleteSample.js][dppresourceguardproxyunlockdeletesample]                                                           | unlockDelete call for ResourceGuardProxy, executed before one can delete it x-ms-original-file: 2025-07-01/ResourceGuardProxyCRUD/UnlockDeleteResourceGuardProxy.json                                                                                                                                          |
| [exportJobsOperationResultGetSample.js][exportjobsoperationresultgetsample]                                                                     | gets the operation result of operation triggered by Export Jobs API. If the operation is successful, then it also contains URL of a Blob and a SAS key to access the same. The blob contains exported jobs in JSON serialized format. x-ms-original-file: 2025-07-01/JobCRUD/GetExportJobsOperationResult.json |
| [exportJobsTriggerSample.js][exportjobstriggersample]                                                                                           | triggers export of jobs and returns an OperationID to track. x-ms-original-file: 2025-07-01/JobCRUD/TriggerExportJobs.json                                                                                                                                                                                     |
| [fetchCrossRegionRestoreJobGetSample.js][fetchcrossregionrestorejobgetsample]                                                                   | fetches the Cross Region Restore Job x-ms-original-file: 2025-07-01/CrossRegionRestore/FetchCrossRegionRestoreJob.json                                                                                                                                                                                         |
| [fetchCrossRegionRestoreJobsListSample.js][fetchcrossregionrestorejobslistsample]                                                               | fetches list of Cross Region Restore job belonging to the vault x-ms-original-file: 2025-07-01/CrossRegionRestore/FetchCrossRegionRestoreJobs.json                                                                                                                                                             |
| [fetchSecondaryRecoveryPointsListSample.js][fetchsecondaryrecoverypointslistsample]                                                             | returns a list of Secondary Recovery Points for a DataSource in a vault, that can be used for Cross Region Restore. x-ms-original-file: 2025-07-01/CrossRegionRestore/FetchSecondaryRPs.json                                                                                                                   |
| [jobsGetSample.js][jobsgetsample]                                                                                                               | gets a job with id in a backup vault x-ms-original-file: 2025-07-01/JobCRUD/GetJob.json                                                                                                                                                                                                                        |
| [jobsListSample.js][jobslistsample]                                                                                                             | returns list of jobs belonging to a backup vault x-ms-original-file: 2025-07-01/JobCRUD/ListJobs.json                                                                                                                                                                                                          |
| [operationResultGetSample.js][operationresultgetsample]                                                                                         | gets the operation result for a resource x-ms-original-file: 2025-07-01/GetOperationResult.json                                                                                                                                                                                                                |
| [operationStatusBackupVaultContextGetSample.js][operationstatusbackupvaultcontextgetsample]                                                     | gets the operation status for an operation over a BackupVault's context. x-ms-original-file: 2025-07-01/GetOperationStatusVaultContext.json                                                                                                                                                                    |
| [operationStatusGetSample.js][operationstatusgetsample]                                                                                         | gets the operation status for a resource. x-ms-original-file: 2025-07-01/GetOperationStatus.json                                                                                                                                                                                                               |
| [operationStatusResourceGroupContextGetSample.js][operationstatusresourcegroupcontextgetsample]                                                 | gets the operation status for an operation over a ResourceGroup's context. x-ms-original-file: 2025-07-01/GetOperationStatusRGContext.json                                                                                                                                                                     |
| [recoveryPointsGetSample.js][recoverypointsgetsample]                                                                                           | gets a Recovery Point using recoveryPointId for a Datasource. x-ms-original-file: 2025-07-01/BackupInstanceOperations/GetRecoveryPoint.json                                                                                                                                                                    |
| [recoveryPointsListSample.js][recoverypointslistsample]                                                                                         | returns a list of Recovery Points for a DataSource in a vault. x-ms-original-file: 2025-07-01/BackupInstanceOperations/ListRecoveryPoints.json                                                                                                                                                                 |
| [resourceGuardsDeleteSample.js][resourceguardsdeletesample]                                                                                     | deletes a ResourceGuard resource from the resource group. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/DeleteResourceGuard.json                                                                                                                                                                            |
| [resourceGuardsGetDefaultBackupSecurityPINRequestsObjectSample.js][resourceguardsgetdefaultbackupsecuritypinrequestsobjectsample]               | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultBackupSecurityPINRequests.json                                                                                              |
| [resourceGuardsGetDefaultDeleteProtectedItemRequestsObjectSample.js][resourceguardsgetdefaultdeleteprotecteditemrequestsobjectsample]           | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultDeleteProtectedItemRequests.json                                                                                            |
| [resourceGuardsGetDefaultDeleteResourceGuardProxyRequestsObjectSample.js][resourceguardsgetdefaultdeleteresourceguardproxyrequestsobjectsample] | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultDeleteResourceGuardProxyRequests.json                                                                                       |
| [resourceGuardsGetDefaultDisableSoftDeleteRequestsObjectSample.js][resourceguardsgetdefaultdisablesoftdeleterequestsobjectsample]               | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultDisableSoftDeleteRequests.json                                                                                              |
| [resourceGuardsGetDefaultUpdateProtectedItemRequestsObjectSample.js][resourceguardsgetdefaultupdateprotecteditemrequestsobjectsample]           | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultUpdateProtectedItemRequests.json                                                                                            |
| [resourceGuardsGetDefaultUpdateProtectionPolicyRequestsObjectSample.js][resourceguardsgetdefaultupdateprotectionpolicyrequestsobjectsample]     | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetDefaultUpdateProtectionPolicyRequests.json                                                                                         |
| [resourceGuardsGetSample.js][resourceguardsgetsample]                                                                                           | returns a ResourceGuard belonging to a resource group. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetResourceGuard.json                                                                                                                                                                                  |
| [resourceGuardsListBackupSecurityPINRequestsObjectsSample.js][resourceguardslistbackupsecuritypinrequestsobjectssample]                         | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListBackupSecurityPINRequests.json                                                                                                    |
| [resourceGuardsListDeleteProtectedItemRequestsObjectsSample.js][resourceguardslistdeleteprotecteditemrequestsobjectssample]                     | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListDeleteProtectedItemRequests.json                                                                                                  |
| [resourceGuardsListDeleteResourceGuardProxyRequestsObjectsSample.js][resourceguardslistdeleteresourceguardproxyrequestsobjectssample]           | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListDeleteResourceGuardProxyRequests.json                                                                                             |
| [resourceGuardsListDisableSoftDeleteRequestsObjectsSample.js][resourceguardslistdisablesoftdeleterequestsobjectssample]                         | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListDisableSoftDeleteRequests.json                                                                                                    |
| [resourceGuardsListResourcesInResourceGroupSample.js][resourceguardslistresourcesinresourcegroupsample]                                         | returns ResourceGuards collection belonging to a ResourceGroup. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetResourceGuardsInResourceGroup.json                                                                                                                                                         |
| [resourceGuardsListResourcesInSubscriptionSample.js][resourceguardslistresourcesinsubscriptionsample]                                           | returns ResourceGuards collection belonging to a subscription. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/GetResourceGuardsInSubscription.json                                                                                                                                                           |
| [resourceGuardsListUpdateProtectedItemRequestsObjectsSample.js][resourceguardslistupdateprotecteditemrequestsobjectssample]                     | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListUpdateProtectedItemRequests.json                                                                                                  |
| [resourceGuardsListUpdateProtectionPolicyRequestsObjectsSample.js][resourceguardslistupdateprotectionpolicyrequestsobjectssample]               | returns collection of operation request objects for a critical operation protected by the given ResourceGuard resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/ListUpdateProtectionPolicyRequests.json                                                                                               |
| [resourceGuardsPatchSample.js][resourceguardspatchsample]                                                                                       | updates a ResourceGuard resource belonging to a resource group. For example, updating tags for a resource. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/PatchResourceGuard.json                                                                                                                            |
| [resourceGuardsPutSample.js][resourceguardsputsample]                                                                                           | creates or updates a ResourceGuard resource belonging to a resource group. x-ms-original-file: 2025-07-01/ResourceGuardCRUD/PutResourceGuard.json                                                                                                                                                              |
| [restorableTimeRangesFindSample.js][restorabletimerangesfindsample]                                                                             | x-ms-original-file: 2025-07-01/BackupInstanceOperations/FindRestorableTimeRanges.json                                                                                                                                                                                                                          |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node backupInstancesAdhocBackupSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env  node backupInstancesAdhocBackupSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[backupinstancesadhocbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesAdhocBackupSample.js
[backupinstancescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesCreateOrUpdateSample.js
[backupinstancesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesDeleteSample.js
[backupinstancesextensionroutinglistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesExtensionRoutingListSample.js
[backupinstancesgetbackupinstanceoperationresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesGetBackupInstanceOperationResultSample.js
[backupinstancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesGetSample.js
[backupinstanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesListSample.js
[backupinstancesresumebackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesResumeBackupsSample.js
[backupinstancesresumeprotectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesResumeProtectionSample.js
[backupinstancesstopprotectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesStopProtectionSample.js
[backupinstancessuspendbackupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesSuspendBackupsSample.js
[backupinstancessyncbackupinstancesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesSyncBackupInstanceSample.js
[backupinstancestriggercrossregionrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesTriggerCrossRegionRestoreSample.js
[backupinstancestriggerrehydratesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesTriggerRehydrateSample.js
[backupinstancestriggerrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesTriggerRestoreSample.js
[backupinstancesvalidatecrossregionrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesValidateCrossRegionRestoreSample.js
[backupinstancesvalidateforbackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesValidateForBackupSample.js
[backupinstancesvalidateformodifybackupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesValidateForModifyBackupSample.js
[backupinstancesvalidateforrestoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupInstancesValidateForRestoreSample.js
[backuppoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupPoliciesCreateOrUpdateSample.js
[backuppoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupPoliciesDeleteSample.js
[backuppoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupPoliciesGetSample.js
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupPoliciesListSample.js
[backupvaultoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupVaultOperationResultsGetSample.js
[backupvaultschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupVaultsCheckNameAvailabilitySample.js
[backupvaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupVaultsCreateOrUpdateSample.js
[backupvaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupVaultsDeleteSample.js
[backupvaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupVaultsGetSample.js
[backupvaultslistinresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupVaultsListInResourceGroupSample.js
[backupvaultslistinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupVaultsListInSubscriptionSample.js
[backupvaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/backupVaultsUpdateSample.js
[dataprotectioncheckfeaturesupportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/dataProtectionCheckFeatureSupportSample.js
[dataprotectionoperationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/dataProtectionOperationsListSample.js
[deletedbackupinstancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/deletedBackupInstancesGetSample.js
[deletedbackupinstanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/deletedBackupInstancesListSample.js
[deletedbackupinstancesundeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/deletedBackupInstancesUndeleteSample.js
[dppresourceguardproxycreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/dppResourceGuardProxyCreateOrUpdateSample.js
[dppresourceguardproxydeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/dppResourceGuardProxyDeleteSample.js
[dppresourceguardproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/dppResourceGuardProxyGetSample.js
[dppresourceguardproxylistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/dppResourceGuardProxyListSample.js
[dppresourceguardproxyunlockdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/dppResourceGuardProxyUnlockDeleteSample.js
[exportjobsoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/exportJobsOperationResultGetSample.js
[exportjobstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/exportJobsTriggerSample.js
[fetchcrossregionrestorejobgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/fetchCrossRegionRestoreJobGetSample.js
[fetchcrossregionrestorejobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/fetchCrossRegionRestoreJobsListSample.js
[fetchsecondaryrecoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/fetchSecondaryRecoveryPointsListSample.js
[jobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/jobsGetSample.js
[jobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/jobsListSample.js
[operationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/operationResultGetSample.js
[operationstatusbackupvaultcontextgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/operationStatusBackupVaultContextGetSample.js
[operationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/operationStatusGetSample.js
[operationstatusresourcegroupcontextgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/operationStatusResourceGroupContextGetSample.js
[recoverypointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/recoveryPointsGetSample.js
[recoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/recoveryPointsListSample.js
[resourceguardsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsDeleteSample.js
[resourceguardsgetdefaultbackupsecuritypinrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsGetDefaultBackupSecurityPINRequestsObjectSample.js
[resourceguardsgetdefaultdeleteprotecteditemrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsGetDefaultDeleteProtectedItemRequestsObjectSample.js
[resourceguardsgetdefaultdeleteresourceguardproxyrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsGetDefaultDeleteResourceGuardProxyRequestsObjectSample.js
[resourceguardsgetdefaultdisablesoftdeleterequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsGetDefaultDisableSoftDeleteRequestsObjectSample.js
[resourceguardsgetdefaultupdateprotecteditemrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsGetDefaultUpdateProtectedItemRequestsObjectSample.js
[resourceguardsgetdefaultupdateprotectionpolicyrequestsobjectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsGetDefaultUpdateProtectionPolicyRequestsObjectSample.js
[resourceguardsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsGetSample.js
[resourceguardslistbackupsecuritypinrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsListBackupSecurityPINRequestsObjectsSample.js
[resourceguardslistdeleteprotecteditemrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsListDeleteProtectedItemRequestsObjectsSample.js
[resourceguardslistdeleteresourceguardproxyrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsListDeleteResourceGuardProxyRequestsObjectsSample.js
[resourceguardslistdisablesoftdeleterequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsListDisableSoftDeleteRequestsObjectsSample.js
[resourceguardslistresourcesinresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsListResourcesInResourceGroupSample.js
[resourceguardslistresourcesinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsListResourcesInSubscriptionSample.js
[resourceguardslistupdateprotecteditemrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsListUpdateProtectedItemRequestsObjectsSample.js
[resourceguardslistupdateprotectionpolicyrequestsobjectssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsListUpdateProtectionPolicyRequestsObjectsSample.js
[resourceguardspatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsPatchSample.js
[resourceguardsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/resourceGuardsPutSample.js
[restorabletimerangesfindsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/dataprotection/arm-dataprotection/samples/v4/javascript/restorableTimeRangesFindSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-dataprotection?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/dataprotection/arm-dataprotection/README.md
